--- a/xxprofile/proj.apple/xxprofileViewer/Info.plist
+++ b/xxprofile/proj.apple/xxprofileViewer/Info.plist
@@ -41,10 +41,12 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018年 bianchui. All rights reserved.</string>
+	<string>Copyright © 2018 bianchui. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
