--- a/xxprofile/proj.android/san-angeles/app/build.gradle
+++ b/xxprofile/proj.android/san-angeles/app/build.gradle
@@ -13,6 +13,13 @@ android {
             cmake {
                 cppFlags "-std=c++11"
             }
+            ndkBuild {
+                arguments '-j' + Runtime.runtime.availableProcessors()
+                arguments "NDK_APPLICATION_MK=jni/Application.mk"
+            }
+        }
+        ndk {
+            abiFilters 'armeabi-v7a'
         }
     }
     buildTypes {
@@ -23,7 +30,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path 'src/main/cpp/CMakeLists.txt'
+            path 'CMakeLists.txt'
         }
     }
 }
