--- a/xxprofile/proj.win/xxprofile.vcxproj
+++ b/xxprofile/proj.win/xxprofile.vcxproj
@@ -21,8 +21,9 @@
   <ItemGroup>
     <ClCompile Include="..\src\platforms\platform_base.cpp" />
     <ClCompile Include="..\src\xxprofile.cpp" />
-    <ClCompile Include="..\src\xxprofile_build.cpp" />
+    <ClCompile Include="..\src\xxprofile_archive.cpp" />
     <ClCompile Include="..\src\xxprofile_name.cpp" />
+    <ClCompile Include="..\src\xxprofile_tls.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\helper\CommonMacros.h" />
@@ -30,43 +31,57 @@
     <ClInclude Include="..\src\helper\SimpleConfig.h" />
     <ClInclude Include="..\src\platforms\platform.hpp" />
     <ClInclude Include="..\src\platforms\platform_base.hpp" />
-    <ClInclude Include="..\src\platforms\platform_inc_windows.h" />
-    <ClInclude Include="..\src\platforms\platform_win.h" />
+    <ClInclude Include="..\src\platforms\platform_win.hpp" />
+    <ClInclude Include="..\src\platforms\win\win_inc_windows.h" />
+    <ClInclude Include="..\src\platforms\win\win_SystemLock.h" />
+    <ClInclude Include="..\src\platforms\win\win_ThreadLocal.h" />
+    <ClInclude Include="..\src\platforms\win\win_timer.h" />
     <ClInclude Include="..\src\xxprofile.hpp" />
-    <ClInclude Include="..\src\xxprofile_build.hpp" />
+    <ClInclude Include="..\src\xxprofile_archive.hpp" />
+    <ClInclude Include="..\src\xxprofile_data.hpp" />
+    <ClInclude Include="..\src\xxprofile_internal.hpp" />
+    <ClInclude Include="..\src\xxprofile_macros.hpp" />
     <ClInclude Include="..\src\xxprofile_name.hpp" />
+    <ClInclude Include="..\src\xxprofile_namepool.hpp" />
+    <ClInclude Include="..\src\xxprofile_tls.hpp" />
+    <ClInclude Include="..\src\xxprofile_version.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{F64276AD-1720-4924-A676-B12CB1086F2B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>xxprofile</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <PropertyGroup Label="Configuration">
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '10.0'">v100</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '11.0'">v110</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '11.0' and exists('$(MSBuildProgramFiles32)\Microsoft SDKs\Windows\v7.1A')">v110_xp</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '12.0'">v120</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '12.0' and exists('$(MSBuildProgramFiles32)\Microsoft SDKs\Windows\v7.1A')">v120_xp</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '14.0'">v140</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '15.0'">v141</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)' == '16.0'">v142</PlatformToolset>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -113,9 +128,9 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;_DEBUG;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;_DEBUG;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>false</SDLCheck>
-      <AdditionalIncludeDirectories>../Source/Runtime/Core/Public</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,9 +158,9 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;NDEBUG;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;NDEBUG;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>false</SDLCheck>
-      <AdditionalIncludeDirectories>../Source/Runtime/Core/Public</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
