--- a/xxprofile/proj.win/xxprofile.vcxproj.filters
+++ b/xxprofile/proj.win/xxprofile.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="src\platforms\win">
       <UniqueIdentifier>{95e8c119-5b2c-43c6-b7fe-088daaa58591}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\compress">
+      <UniqueIdentifier>{580ef8f1-c997-4525-aa1b-96bf2ec409a9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\xxprofile.cpp">
@@ -29,6 +32,9 @@
     </ClCompile>
     <ClCompile Include="..\src\xxprofile_archive.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\compress\compress_zstd.lib.c">
+      <Filter>src\compress</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
