--- a/xxprofile/proj.apple/test_ios/Info.plist
+++ b/xxprofile/proj.apple/test_ios/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>xxprofile_test</string>
+	<string>xx_test</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
