--- a/xxprofile/proj.android/san-angeles/app/build.gradle
+++ b/xxprofile/proj.android/san-angeles/app/build.gradle
@@ -36,6 +36,11 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['../../libs']
+        }
+    }
     externalNativeBuild {
         cmake {
             path 'CMakeLists.txt'
