--- a/xxprofile/proj.win/xxprofileViewer/xxprofileViewer.vcxproj
+++ b/xxprofile/proj.win/xxprofileViewer/xxprofileViewer.vcxproj
@@ -94,9 +94,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>XXPROFILE_HAS_DECOMPRESS=1;XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;../../../libs/glfw-3.2.1/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -109,9 +109,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>XXPROFILE_HAS_DECOMPRESS=1;XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;../../../libs/glfw-3.2.1/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -124,9 +124,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>XXPROFILE_HAS_DECOMPRESS=1;XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;../../../libs/glfw-3.2.1/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -139,9 +139,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>XXPROFILE_HAS_DECOMPRESS=1;XX_PLATFORM_WINDOWS=1;_CRT_SECURE_NO_WARNINGS;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../;../../../libs/zlib/src;../../../libs/lz4-1.9.4/lib;../../../libs/lz4-2.10/src;../../../libs/imgui-1.62;../../../libs/imgui-1.62/examples;../../../libs/lzo-2.10/include;../../../libs/glfw-3.2.1/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
